RAM-599 changing api to be same as backend for name usage model : mandatory -> optionalInd
