# commons/RamAPI.ts
@@ -344,13 +344,13 @@ export class RelationshipType extends CodeDecode implements RelationshipType {
 // relationship attribute name usage ..................................................................................
 
 export interface IRelationshipAttributeNameUsage {
-    mandatory: boolean;
+    optionalInd: boolean;
     defaultValue: string;
     attributeNameDef: IHrefValue<IRelationshipAttributeName>;
 }
 
 export class RelationshipAttributeNameUsage implements IRelationshipAttributeNameUsage {
-    constructor(public mandatory: boolean,
+    constructor(public optionalInd: boolean,
                 public defaultValue: string,
                 public attributeNameDef: HrefValue<RelationshipAttributeName>) {
     }
@@ -623,13 +623,13 @@ export class RoleAttribute implements IRoleAttribute {
 // role attribute name usage ..........................................................................................
 
 export interface IRoleAttributeNameUsage {
-    mandatory: boolean;
+    optionalInd: boolean;
     defaultValue: string;
     attributeNameDef: IHrefValue<IRoleAttributeName>;
 }
 
 export class RoleAttributeNameUsage implements IRoleAttributeNameUsage {
-    constructor(public mandatory: boolean,
+    constructor(public optionalInd: boolean,
                 public defaultValue: string,
                 public attributeNameDef: IHrefValue<IRoleAttributeName>) {
     }
